--- version 0.4 (xx/xx/xxxx) ---
Added exporting of physics attributes to mesh scene nodes. The attributes
are added to the "UserData" section of the node info. These attributes
may be read via the ISceneUserDataSerializer interface and feed into
the applications physics system (Bullet, Irrlicht (collision), PhysX, etc.).

Updated to allow custom materials (${materialtype}) to optionally specify
vertext type: ${materialtype}:{vertextype} where {vertextype} may be: 
'standard' (default), '2tcoords', or 'tangents'. Example: '$mymat:tangents',
would generate a material type named 'mymat' with EVT_TANGENTS vertices.

Updated to allow EVT_TANGENTS vertex type to be created for materials that
require it (normalmap_x, parallaxmap_x). Automatically detected & created.

Updated to allow a single mesh to contain more than 64k vertices (32 bit
indices). Applications will require the CIrrMeshWriter.cpp & 
CIrrMeshFileLoader.cpp patch.

bug fix - When manual entering directory paths, incorrect path was being 
returned by "CheckDirectory".

Added "Blender Version", "Platform uname", and iwalktest/imeshcvt env
variables to irrb.log file.

--- version 0.3 (02/10/2009) ---
Fixed "vertex colors" - Blender vertex colors are written if vertex color
exists and:
    * Face doesn't have a blender material assigned or
    * Material is assigned and has "VCol Paint" checked.

Added option to create directory if mesh, image, or scene path doesn't
exist.

Added logic to abort the export if error occurs when opening irrb.log file.

Updated to use substitution variables ($1, $2) in IWALKTEST environment
variable:
    $1 - Scene File (full path)
    $2 - Relative Base Directory
0.2 IWALKTEST environment variables that used "iwalktest.exe" should be 
updated to:
    ..iwalktest -i $1 -a $2

Added Blender "procedural" material as a face property - two faces in the 
same mesh with different procedural materials will cause two meshbuffers