@@ -50,14 +50,10 @@ namespace Tubras
     }
 
     //-----------------------------------------------------------------------
-    //                              s t e p 
+    //                              u p d a t e
     //-----------------------------------------------------------------------
-    int TInputManager::step()
+    void TInputManager::update(const u32 deltaTime)
     {
-
-        int result=0;
-
-        return result;
     }
 
     //-----------------------------------------------------------------------
