@@ -61,6 +61,9 @@ LightAttributes = {'LightType':'Point',
                    'Radius':50.0,
                    'CastShadows':1}
 
+MeshAttributes = {'HWMappingHint':'static',
+                  'HWMappingBufferType':'vertexindex'}
+
 BillboardAttributes = {'Shade_Top': '255 255 255 255',
                        'Shade_Down': '255 255 255 255'}
 
